delete bookcollection
